se distribuyo el codigo que se tenia en sass

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             delectus distinctio illum architecto! In quasi delectus eius.</p>
             <section>
                 <h2>Cocina Destacada</h2>
-                <div class="tarjetas">
+                <div class="scroll">
                 <article>
                     <h2>producto</h2>
                     <img src="./herramientas/torta-oreo.jpg" alt="" class="tarjeta__img">
