--- a/index.html
+++ b/index.html
@@ -16,26 +16,40 @@
 
 <body>
     <header>
-        <div class="titulo">
-            <h1><a href=""> La Cocina de Oliver</a></h1>
+        <div class="header__top">
+            <p>Telefono:(011)2345-6789</p>
+            <p>¡Envios a todo capital!</p>
+            <p>lacocinadeoliver@gmail.com.ar</p>
         </div>
-        <nav>
-            <ul>
-                <li><a href="">Inicio</a></li>
-                <li><a href="./pages/page-one.html">Cocina</a></li>
-                <li><a href="">Pastelería</a></li>
-                <li><a href="">Contacto</a></li>
-            </ul>
-        </nav>
+        <div class="header__bottom">
+            <div class="titulo">
+                <h1><a href=""> La Cocina de Oliver</a></h1>
+            </div>
+            <div class="header__form">
+                <form action="">
+                    <input type="text" placeholder="Buscar...">
+                    <input type="submit" value="" class="btn-submit">
+                </form>
+            </div>
+            <nav>
+                <ul>
+                    <li><a href="">Inicio</a></li>
+                    <li><a href="./pages/page-one.html">Cocina</a></li>
+                    <li><a href="">Pastelería</a></li>
+                    <li class="como-comprar"><a href="">Cómo comprar</a></li>
+                    <li><a href="">Contacto</a></li>
+                </ul>
+            </nav>
+        </div>
     </header>
     <main>
-        <p class="data">Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis repellat, corporis quod
-            autem odit minima vero distinctio voluptas sint ullam voluptatum natus omnis, aliquam dolorem et expedita
-            ut, reiciendis quae! Nam officiis ratione, fuga eos neque hic molestias, exercitationem porro ullam nostrum,
-            delectus distinctio illum architecto! In quasi delectus eius.</p>
-            <section>
-                <h2>Cocina Destacada</h2>
-                <div class="scroll">
+        <div class="data">
+            <p class="data__base">Bienvenido a La Cocina de Oliver!</p>
+            <p> Disfruta de nuestra selección de menú de cocina y pastelería.</p>
+        </div>
+        <section>
+            <h2>Cocina Destacada</h2>
+            <div class="scroll">
                 <article>
                     <h2>producto</h2>
                     <img src="./herramientas/torta-oreo.jpg" alt="" class="tarjeta__img">
@@ -84,10 +98,10 @@
                     <p class="tarjeta__precio">$xxxxx</p>
                     <a href="" class="btn">comprar</a>
                 </article>
-            </section>
-            <section>
-                <h2>Pastelería Destacada</h2>
-                <div class="tarjetas">
+        </section>
+        <section>
+            <h2>Pastelería Destacada</h2>
+            <div class="scroll">
                 <article>
                     <h2>producto</h2>
                     <img src="./herramientas/torta-oreo.jpg" alt="" class="tarjeta__img">
@@ -136,8 +150,8 @@
                     <p class="tarjeta__precio">$xxxxx</p>
                     <a href="" class="btn">comprar</a>
                 </article>
-            </section>
-        </main>
+        </section>
+    </main>
 </body>
 
 </html>
