--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Abyssinica+SIL&family=Alkalami&family=Dancing+Script:wght@400;500;600;700&display=swap"
         rel="stylesheet">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
     <link rel="stylesheet" href="./css/styles.css">
     <title>Document</title>
 </head>
@@ -152,6 +153,77 @@
                 </article>
         </section>
     </main>
+    <footer>
+        <hr>
+        <div class="footer__info">
+
+            <div class="footer__redes">
+                <h3>Redes</h3>
+                <ul>
+                    <li>
+                        <a href="">
+                            <i class="bi bi-instagram"></i>
+                            <p class="p-redes">Instagram</p>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="">
+                            <i class="bi bi-linkedin"></i>
+                            <p class="p-redes">Linkedin</p>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="">
+                            <i class="bi bi-facebook"></i>
+                            <p class="p-redes">Facebook</p>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="">
+                            <i class="bi bi-tiktok"></i>
+                            <p class="p-redes">Tik Tok</p>
+                        </a>
+                    </li>
+                </ul>
+            </div>
+            <div class="footer__contacto">
+                <h3>Contaco</h3>
+                <ul>
+                    <li>
+                        <i class="bi bi-envelope"></i>lacocinadeoliver@gmail.com.ar
+                    </li>
+                    <li>
+                        <i class="bi bi-telephone"></i>(011)2345-6789
+                    </li>
+                    <li>
+                        <i class="bi bi-geo-alt-fill"></i>Av. Corrientes 992, CABA
+                    </li>
+                </ul>
+            </div>
+            <div class="footer__navegacion">
+                <h3>Navegacion</h3>
+                <ul>
+                    <li>
+                        <a href="./pages/page-one.html">Cocina</a>
+                    </li>
+                    <li>
+                        <a href="./pages/page-two.html">Pasteleria</a>
+                    </li>
+                    <li>
+                        <a href="./pages/page-four.html">Cómo comprar</a>
+                    </li>
+                    <li>
+                        <a href="./pages/page-tree.html">Contacto</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+        <div class="footer__bottom">
+            <p>Copyright La Cocina de Oliver - 2022. Todos los derechos reservados.</p>
+            <p>Defensa de las y los consumidores. Para reclamos <a
+                    href="https://autogestion.produccion.gob.ar/consumidores"> ingrese aquí</a></p>
+        </div>
+    </footer>
 </body>
 
 </html>
