se terminaron las tarjetas y el index

--- a/index.html
+++ b/index.html
@@ -49,114 +49,96 @@
             <p> Disfruta de nuestra selección de menú de cocina y pastelería.</p>
         </div>
         <section>
+            <h2>Oferta</h2>
+            <div class="scroll">
+            <article class="oferta">
+                <div class="tarjeta__oferta">
+                    <img src="./herramientas/img/torta-oreo.jpg" alt="" class="tarjeta__oferta--img">
+                    <h2><a href="">Barritas de leche condensada vegana y chocolate con tortilla de chocolate</a></h2>
+                    <p class="tarjeta__precio--oferta">$4.400</p>
+                    <a href="" class="oferta__btn"><p class="btn">Pedilo YA!!</p></a>
+                </div>
+            </article>
+        </div>
+        </section>
+        <section>
             <h2>Cocina Destacada</h2>
             <div class="scroll">
                 <article>
-                    <h2>producto</h2>
-                    <img src="./herramientas/torta-oreo.jpg" alt="" class="tarjeta__img">
-                    <p class="tarjeta__precio">$xxxxx</p>
-                    <a href="" class="btn">comprar</a>
+                    <a href="">
+                        <div class="tarjeta">
+                            <div class="tarjeta__img"><img src="./herramientas/img/torta-oreo.jpg" alt=""></div>
+                    <p class="tarjeta__precio">$4.400</p>
+                    <h2>Barritas de leche condensada vegana y chocolate con tortilla de chocolate</h2>
+                </div></a>
                 </article>
                 <article>
-                    <h2>producto</h2>
-                    <img src="./herramientas/torta-oreo.jpg" alt="" class="tarjeta__img">
-                    <p class="tarjeta__precio">$xxxxx</p>
-                    <a href="" class="btn">comprar</a>
+                    <a href="">
+                        <div class="tarjeta">
+                            <div class="tarjeta__img"><img src="./herramientas/img/torta-oreo.jpg" alt=""></div>
+                    <p class="tarjeta__precio">$4.400</p>
+                    <h2>Barritas de leche condensada vegana y chocolate con tortilla de chocolate</h2>
+                </div></a>
                 </article>
                 <article>
-                    <h2>producto</h2>
-                    <img src="./herramientas/torta-oreo.jpg" alt="" class="tarjeta__img">
-                    <p class="tarjeta__precio">$xxxxx</p>
-                    <a href="" class="btn">comprar</a>
+                    <a href="">
+                        <div class="tarjeta">
+                            <div class="tarjeta__img"><img src="./herramientas/img/torta-oreo.jpg" alt=""></div>
+                    <p class="tarjeta__precio">$4.400</p>
+                    <h2>Barritas de leche condensada vegana y chocolate con tortilla de chocolate</h2>
+                </div></a>
                 </article>
                 <article>
-                    <h2>producto</h2>
-                    <img src="./herramientas/torta-oreo.jpg" alt="" class="tarjeta__img">
-                    <p class="tarjeta__precio">$xxxxx</p>
-                    <a href="" class="btn">comprar</a>
+                    <a href="">
+                        <div class="tarjeta">
+                            <div class="tarjeta__img"><img src="./herramientas/img/torta-oreo.jpg" alt=""></div>
+                    <p class="tarjeta__precio">$4.400</p>
+                    <h2>Barritas de leche condensada vegana y chocolate con tortilla de chocolate</h2>
+                </div></a>
                 </article>
-                <article>
-                    <h2>producto</h2>
-                    <img src="./herramientas/torta-oreo.jpg" alt="" class="tarjeta__img">
-                    <p class="tarjeta__precio">$xxxxx</p>
-                    <a href="" class="btn">comprar</a>
-                </article>
-                <article>
-                    <h2>producto</h2>
-                    <img src="./herramientas/torta-oreo.jpg" alt="" class="tarjeta__img">
-                    <p class="tarjeta__precio">$xxxxx</p>
-                    <a href="" class="btn">comprar</a>
-                </article>
-                <article>
-                    <h2>producto</h2>
-                    <img src="./herramientas/torta-oreo.jpg" alt="" class="tarjeta__img">
-                    <p class="tarjeta__precio">$xxxxx</p>
-                    <a href="" class="btn">comprar</a>
-                </article>
-                <article>
-                    <h2>producto</h2>
-                    <img src="./herramientas/torta-oreo.jpg" alt="" class="tarjeta__img">
-                    <p class="tarjeta__precio">$xxxxx</p>
-                    <a href="" class="btn">comprar</a>
-                </article>
+                
+
         </section>
         <section>
             <h2>Pastelería Destacada</h2>
             <div class="scroll">
                 <article>
-                    <h2>producto</h2>
-                    <img src="./herramientas/torta-oreo.jpg" alt="" class="tarjeta__img">
-                    <p class="tarjeta__precio">$xxxxx</p>
-                    <a href="" class="btn">comprar</a>
+                    <a href="">
+                        <div class="tarjeta">
+                            <div class="tarjeta__img"><img src="./herramientas/img/torta-oreo.jpg" alt=""></div>
+                    <p class="tarjeta__precio">$4.400</p>
+                    <h2>Barritas de leche condensada vegana y chocolate con tortilla de chocolate</h2>
+                </div></a>
                 </article>
                 <article>
-                    <h2>producto</h2>
-                    <img src="./herramientas/torta-oreo.jpg" alt="" class="tarjeta__img">
-                    <p class="tarjeta__precio">$xxxxx</p>
-                    <a href="" class="btn">comprar</a>
+                    <a href="">
+                        <div class="tarjeta">
+                            <div class="tarjeta__img"><img src="./herramientas/img/torta-oreo.jpg" alt=""></div>
+                    <p class="tarjeta__precio">$4.400</p>
+                    <h2>Barritas de leche condensada vegana y chocolate con tortilla de chocolate</h2>
+                </div></a>
                 </article>
                 <article>
-                    <h2>producto</h2>
-                    <img src="./herramientas/torta-oreo.jpg" alt="" class="tarjeta__img">
-                    <p class="tarjeta__precio">$xxxxx</p>
-                    <a href="" class="btn">comprar</a>
+                    <a href="">
+                        <div class="tarjeta">
+                            <div class="tarjeta__img"><img src="./herramientas/img/torta-oreo.jpg" alt=""></div>
+                    <p class="tarjeta__precio">$4.400</p>
+                    <h2>Barritas de leche condensada vegana y chocolate con tortilla de chocolate</h2>
+                </div></a>
                 </article>
                 <article>
-                    <h2>producto</h2>
-                    <img src="./herramientas/torta-oreo.jpg" alt="" class="tarjeta__img">
-                    <p class="tarjeta__precio">$xxxxx</p>
-                    <a href="" class="btn">comprar</a>
-                </article>
-                <article>
-                    <h2>producto</h2>
-                    <img src="./herramientas/torta-oreo.jpg" alt="" class="tarjeta__img">
-                    <p class="tarjeta__precio">$xxxxx</p>
-                    <a href="" class="btn">comprar</a>
-                </article>
-                <article>
-                    <h2>producto</h2>
-                    <img src="./herramientas/torta-oreo.jpg" alt="" class="tarjeta__img">
-                    <p class="tarjeta__precio">$xxxxx</p>
-                    <a href="" class="btn">comprar</a>
-                </article>
-                <article>
-                    <h2>producto</h2>
-                    <img src="./herramientas/torta-oreo.jpg" alt="" class="tarjeta__img">
-                    <p class="tarjeta__precio">$xxxxx</p>
-                    <a href="" class="btn">comprar</a>
-                </article>
-                <article>
-                    <h2>producto</h2>
-                    <img src="./herramientas/torta-oreo.jpg" alt="" class="tarjeta__img">
-                    <p class="tarjeta__precio">$xxxxx</p>
-                    <a href="" class="btn">comprar</a>
+                    <a href="">
+                        <div class="tarjeta">
+                            <div class="tarjeta__img"><img src="./herramientas/img/torta-oreo.jpg" alt=""></div>
+                    <p class="tarjeta__precio">$4.400</p>
+                    <h2>Barritas de leche condensada vegana y chocolate con tortilla de chocolate</h2>
+                </div></a>
                 </article>
         </section>
     </main>
     <footer>
         <hr>
         <div class="footer__info">
-
             <div class="footer__redes">
                 <h3>Redes</h3>
                 <ul>
@@ -225,5 +207,4 @@
         </div>
     </footer>
 </body>
-
 </html>
