se agrego contenido a html de pasteleria

--- a/pages/page-two.html
+++ b/pages/page-two.html
@@ -44,6 +44,7 @@
         </div>
     </header>
     <main>
+        <section>
         <h2>Nuestros platos</h2>
             <div class="scroll">
                 <article>
