--- a/pages/page-four.html
+++ b/pages/page-four.html
@@ -44,7 +44,51 @@
         </div>
     </header>
     <main>
+        <h2 class="titulo-de-contacto">Contacto</h2>
+        <form class="form" action="" autocomplete="off" method="post">
+            <div class="formulario formulario-radio">
+                <div class="formulario__tipodeconsulta">
+                    <p>Que quieres hacer?</p>
+                    <div>
+                    <input type="radio" id="pedido" name="tipo-de-consulta" value="pedido" required class="radio-checkbox">
+                    <label for="pedido">Pedido</label>
+                </div>
+                <div>
+                    <input type="radio" id="consulta" name="tipo-de-consulta" value="consulta" class="radio-checkbox">
+                    <label for="consulta">Consulta</label>
+                </div>
+                <div>
+                    <input type="radio" id="reclamo" name="tipo-de-consulta" value="reclamo" class="radio-checkbox">
+                    <label for="reclamo">Reclamo</label>
+                </div>
+                </div>
+            </div>
+            <div class="formulario formulario-nombre">
+                <div class="formulario__campos">
+                    <label for="nombre">Nombre:</label><br>
+                    <input type="text" id="nombre" name="nombre">
+                </div>
+                <div class="formulario__campos">
+                    <label for="apellido">Apellido:</label><br>
+                    <input type="text" id="apellido" name="apellido">
+                </div>
+            </div>
+            <div class="formulario formulario-mensaje">
+                <div class="formulario__campos">
+                    <label for="mensaje">Pedido/Mensaje/Reclamo:</label><br>
+                    <textarea name="mensaje" id="mensaje" cols="50" rows="20" required></textarea>
+                </div>
+            </div>
 
+            <div class="formulario formulario-mail">
+                <div class="formulario__campos">
+                    <label for="email">Email:</label>
+                    <input type="email" name="email" id="email" required><br>
+                    <label for="recibir-informacion">¿Quieres recibir noticias sobre nuestras promociones?</label>
+                    <input type="checkbox" id="recibir-informacion" name="recibir-noticias" class="radio-checkbox"><br><br>
+                    <input type="submit" value="Enviar">
+                </div>
+        </form>
 
 
 
