--- a/pages/page-four.html
+++ b/pages/page-four.html
@@ -45,6 +45,8 @@
     </header>
     <main>
         <h2 class="titulo-de-contacto">Contacto</h2>
+        <div class="contacto">
+            
         <form class="form" action="" autocomplete="off" method="post">
             <div class="formulario formulario-radio">
                 <div class="formulario__tipodeconsulta">
@@ -88,15 +90,15 @@
                     <input type="checkbox" id="recibir-informacion" name="recibir-noticias" class="radio-checkbox"><br><br>
                     <input type="submit" value="Enviar">
                 </div>
+            </div>
         </form>
-
-
-
-
-        
+        <div class="mapa"><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1642.007219406417!2d-58.38180602411812!3d-34.60379639509089!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bccacf1908bffd%3A0xf9a7f453c40dfb28!2sAv.%20Corrientes%20992%2C%20C1043AAW%20CABA!5e0!3m2!1ses-419!2sar!4v1666195325902!5m2!1ses-419!2sar"  style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+            <p>Av. Corrientes 992, CABA</p>
+            <p>Telefono:(011)2345-6789</p>
+            <p>lacocinadeoliver@gmail.com.ar</p>
+        </div>
+    </div>
     </main>
-
-
     <footer>
         <hr>
         <div class="footer__info">
