--- a/pages/page-three.html
+++ b/pages/page-three.html
@@ -44,7 +44,22 @@
         </div>
     </header>
     <main>
-        
+        <h2 class="titulo-de-contacto">Cómo Comprar</h2>
+        <div class="como-comprar">
+        <p>Bienvenidos a nuestra web!</p>
+        <p>Tomamos pedidos con un máximo de 15 día de anticipación.</p>
+        <ul>
+            <p>Para pedir debes:</p>
+            <li>Identificar el producto deseado.</li>
+            <li>Dirigirte a nuestra sección de contacto.</li>
+            <li>Seleccionar que quieres hacer un pedido.</li>
+            <li>En el mensaje pon lo que quieras pedir, si deseas, puedes poner algún adicional, o solicitar si quieres ingredientes especiales, ej.: ingredientes sin tacc (esto puede modificar el precio).</li>
+            <li>Enviar el pedido.</li>
+            <li>Recuerda que puedes cancelar tu pedido con un mínimo de 6 horas de anticipación.</li>
+        </ul>
+        <p>Una vez enviado el pedido, recibirás una factura con el coste total.</p>
+        <p>Ten en cuenta que no se tomará el pedido hasta no haberse acreditado el pago del mismo.</p>
+    </div>
 
 
 
